--- a/src/Makefile.build
+++ b/src/Makefile.build
@@ -61,8 +61,8 @@ userprog_SRC += userprog/syscall.c	# System call handler.
 userprog_SRC += userprog/gdt.c		# GDT initialization.
 userprog_SRC += userprog/tss.c		# TSS management.
 
-# No virtual memory code yet.
-#vm_SRC = vm/file.c			# Some file.
+# Virtual memory code.
+vm_SRC  = vm/frame.c				# Frame tables.
 
 # Filesystem code.
 filesys_SRC  = filesys/filesys.c	# Filesystem core.
