Implement a basic swap table
Swap table is implemented: see vm_swap_in() and vm_swap_out().
Each page is assigned to contiguous sectors of total size PGSIZE,
to store the content of a page being swapped out.

--- a/src/Makefile.build
+++ b/src/Makefile.build
@@ -64,6 +64,7 @@ userprog_SRC += userprog/tss.c		# TSS management.
 # Virtual memory code.
 vm_SRC  = vm/frame.c				# Frame tables.
 vm_SRC += vm/page.c					# Page tables.
+vm_SRC += vm/swap.c					# Swap tables.
 
 # Filesystem code.
 filesys_SRC  = filesys/filesys.c	# Filesystem core.
