Add a skeleton of buffer cache, and integrate with inode

--- a/src/Makefile.build
+++ b/src/Makefile.build
@@ -70,6 +70,7 @@ vm_SRC += vm/swap.c					# Swap tables.
 filesys_SRC  = filesys/filesys.c	# Filesystem core.
 filesys_SRC += filesys/free-map.c	# Free sector bitmap.
 filesys_SRC += filesys/file.c		# Files.
+filesys_SRC += filesys/cache.c		# Buffer Cache.
 filesys_SRC += filesys/directory.c	# Directories.
 filesys_SRC += filesys/inode.c		# File headers.
 filesys_SRC += filesys/fsutil.c		# Utilities.
